# Kaspersky_ini_parser

./: .env.example  .gitignore  README.md
configs/: invalid_attr.ini  invalid_value.ini  sample.ini  test_invalid_config.ini  valid_sample.ini
src/: Makefile  pyproject.toml  pytest.ini
src/app/: main.py
src/app/cli/: __init__.py  argparse.py
src/app/core/: __init__.py  settings.py
src/app/framework/config_loader/: __init__.py  loader.py
src/app/framework/schemas/: __init__.py  config.py
src/app/framework/validation/: __init__.py  validation.py
src/tests/: test_config_loader.py  test_invalid_ini_config.py  test_valid_cfg.py
